tests/data/placebo/test_network_interface_filter/ec2.CreateNetworkInterface_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "NetworkInterface": {
      "Status": "pending",
      "MacAddress": "02:54:b7:8e:05:ac",
      "SourceDestCheck": true,
      "AvailabilityZone": "us-east-1c",
      "Description": "",
      "NetworkInterfaceId": "eni-d834cdcf",
      "PrivateIpAddresses": [
        {
          "Primary": true,
          "PrivateIpAddress": "10.4.8.179"
        }
      ],
      "RequesterManaged": false,
      "SubnetId": "subnet-55061130",
      "VpcId": "vpc-c3c27aba",
      "RequesterId": "AIDAIYEUEZZQWE5TZHHAE",
      "Groups": [
        {
          "GroupName": "web-tier",
          "GroupId": "sg-d29623a3"
        }
      ],
      "Ipv6Addresses": [],
      "OwnerId": "644160558196",
      "TagSet": [],
      "PrivateIpAddress": "10.4.8.179"
    }
  }
}
