tests/data/placebo/test_network_interface_filter/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-d29623a3",
    "ResponseMetadata": {}
  }
}
