tests/data/placebo/test_network_interface_filter/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-019e2b70",
    "ResponseMetadata": {}
  }
}
