tests/data/placebo/test_network_interface_filter/ec2.CreateSubnet_1.json
{
  "status_code": 200,
  "data": {
    "Subnet": {
      "AvailabilityZone": "us-east-1c",
      "AvailableIpAddressCount": 251,
      "DefaultForAz": false,
      "Ipv6CidrBlockAssociationSet": [],
      "VpcId": "vpc-c3c27aba",
      "State": "pending",
      "MapPublicIpOnLaunch": false,
      "SubnetId": "subnet-55061130",
      "CidrBlock": "10.4.8.0/24",
      "AssignIpv6AddressOnCreation": false
    },
    "ResponseMetadata": {}
  }
}
