tests/data/placebo/test_network_interface_filter/ec2.DeleteNetworkInterface_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "2474bcad-f77c-4e32-81cc-ca3ea75132b0", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:38:08 GMT"
            }
        }
    }
}
