tests/data/placebo/test_network_interface_filter/ec2.DeleteSubnet_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "b1bf5dd9-1922-4efe-b50c-e9a7a743700b", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sat, 23 Jul 2016 16:49:04 GMT"
            }
        }
    }
}
