tests/data/placebo/test_network_interface_filter/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "28a53f66-56a1-48d4-a2b1-88770e2093b1", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sat, 23 Jul 2016 16:49:07 GMT"
            }
        }
    }
}
