tests/data/placebo/test_network_interface_filter/ec2.DescribeSubnets_1.json
{
  "status_code": 200,
  "data": {
    "Subnets": [
      {
        "AvailabilityZone": "us-east-1c",
        "AvailableIpAddressCount": 250,
        "DefaultForAz": false,
        "Ipv6CidrBlockAssociationSet": [],
        "VpcId": "vpc-c3c27aba",
        "State": "available",
        "MapPublicIpOnLaunch": false,
        "SubnetId": "subnet-55061130",
        "CidrBlock": "10.4.8.0/24",
        "AssignIpv6AddressOnCreation": false
      }
    ],
    "ResponseMetadata": {}
  }
}
