tests/data/placebo/test_network_interface_filter/ec2.ModifyNetworkInterfaceAttribute_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "bcfc92f5-df76-49da-b49e-1d6d451413c4", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:38:08 GMT"
            }
        }
    }
}
