tests/data/placebo/test_network_interface_filter/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-05cf9b60", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetC", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "tagfanncyvalue", 
                        "Key": "tagfancykey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-6f273034", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetPrivate", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Private", 
                        "Key": "NetworkLocation"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-71bda45c", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetD", 
                        "Key": "Name"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-ecfb30a4", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetPublic", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Public", 
                        "Key": "NetworkLocation"
                    }
                ]
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "9d8b2cc1-5b4e-11e7-a7ba-f3a22e7ea338", 
            "HTTPHeaders": {
                "x-amzn-requestid": "9d8b2cc1-5b4e-11e7-a7ba-f3a22e7ea338", 
                "date": "Tue, 27 Jun 2017 15:38:06 GMT", 
                "content-length": "702", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
